# fluctuant

./: README.md  pyproject.toml
notebooks/: Astromer Pipeline.ipynb  Multiband Pipeline.ipynb  Physics Pipeline.ipynb
notebooks-old/: Enhaned Pipeline Test.ipynb  Pipeline Test.ipynb
src/fluctuant/: __init__.py  classifiers.py  cli.py  generators.py  pipelines.py  processors.py  utils.py
tests/: conftest.py  test_classifiers.py  test_cli.py  test_generators.py  test_pipelines.py
