[project]
name = "fluctuant"
version = "0.1.0"
description = "AGN vs TDE classification using ASTROMER transformer embeddings"
readme = "README.md"
authors = [
    { name = "Nicholas Earl", email = "contact@nicholasearl.me" }
]
requires-python = ">=3.9"
dependencies = [
    "astromer>=0.1.8",
    "black>=25.11.0",
    "click>=8.0",
    "keras==2.13.1",
    "pandas>=2.1.0",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "tensorflow==2.13.0",
]

[project.scripts]
fluctuant = "fluctuant.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
